fix  pop up  z-index

--- a/src/components/Room/userForm.css
+++ b/src/components/Room/userForm.css
@@ -9,7 +9,7 @@
     left: 0;
     right: 0;
     border-radius: 5px;
- 
+    z-index: 1;
     justify-content: center;
 
 }
@@ -18,7 +18,6 @@
     color:#d2dcde;
     display: flex;
     flex-direction: column;
-
     justify-content: center;
     
 }
